# bluesky_api

./: README.md  collector.py  main.py  network_analysis.py  network_metrics.py  pyproject.toml  recommendation.py  report_generator.py  run_pipeline.py  sentiment_analysis.py  text_mining.py
data/: collected_data.json
output/: relatorio_final.tex
